@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-31T16:25:03Z",
+  "timestamp" : "2022-09-01T01:48:34Z",
   "count_outdated" : 117,
   "uniques_outdated" : 80,
-  "count" : 135,
-  "uniques" : 91,
+  "count" : 138,
+  "uniques" : 94,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -28,10 +28,10 @@
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 5,
+      "count_minmax": [ 2, 5 ],
+      "uniques": 4,
+      "uniques_minmax": [ 1, 4 ]
     }
   ]
 }
