@@ -1,6 +1,6 @@
 {
-  "count": 18,
-  "uniques": 7,
+  "count": 21,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -19,8 +19,8 @@
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 5,
+      "uniques": 4
     }
   ]
 }
