@@ -1,3 +1,11 @@
+2022-09-01T01:48:34Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2968310770
+* notice: last 14d: unq all: 8 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 80 117 / 91 135
+* notice: next accum: outdated-unq outdated-all / unq all: 80 117 / 94 138
+* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +4 +5 -0 -0 / 4 5
+* notice: removed / changed dates: [] / [2022-08-31]
+
 2022-08-31T16:25:03Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2965455858
 * notice: last 14d: unq all: 7 18
